# mock-server

./: .gitignore  Cargo.toml  LICENSE  README.md  seal.json
.github/workflows/: release.yml
src/: app.rs  db.rs  main.rs  service.rs  util.rs
src/docs/: hand.md  help.md
src/models/: data_config.rs  mod.rs  named_query.rs
src/template/: consts.rs  generator.rs  id.rs  mod.rs  name.rs  text.rs  utils.rs  value.rs
src/tests/: array.rs  basic.rs  func.rs  mod.rs  object.rs
static/: db.json  json1.json
