[package]
authors = ["yao <yaojianpin@sohu.com>"]
edition = "2021"
name = "mock-server"
version = "0.5.0"

[dependencies]
axum = "0.5.13"
clap = {version = "3.2.17", features = ["derive"]}
once_cell = "1.13.0"
rand = "0.8.5"
regex = "1.6.0"
serde = {version = "1.0.141", features = ["derive"]}
serde_json = "1.0.82"
tokio = {version = "1.20.1", features = ["full"]}
tower-http = {version = "0.3.4", features = ["fs", "trace", "cors"]}
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["registry", "fmt"]}
uuid = {version = "1.1.2", features = ["v4"]}
